# newsbuddy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  crontab  docker-compose.yml  lefthook.yml  package.json  pyproject.toml  supervisor.conf
.agents/: settings.local.json
.beads/: beads.left.jsonl  beads.left.meta.json
.github/workflows/: bare-metal-deploy.yml  ci.yml  docker-racknerd-deploy.yml
.maestro/flows/: long_form_mark_read.yaml
admin/: .env.example  cli.py  config.py  output.py  remote.py  remote_ops.py  ssh.py
alembic/versions/: 1620a8545d8c_add_chat_tables.py  1f5c42ea0015_backfill_chat_sessions_for_favorites.py  20260223_01_add_has_completed_onboarding.py  20260308_01_add_chat_session_context_snapshot.py  20260308_02_add_user_api_keys.py  20260317_01_add_chat_message_render_metadata.py  20260319_01_unify_knowledge_chat_sessions.py  20260319_02_add_digest_checkpoint_settings.py  (+5 more)
app/: constants.py  main.py
cli/: README.md  __init__.py  go.mod  go.sum
config/: aggregators.yml
docker/: crontab  entrypoint.sh  run-api.sh  run-bootstrap.sh  run-postgres.sh  run-queue-watchdog.sh  run-scheduler.sh  run-worker.sh  supercronic.py  supervisord.conf  supervisord.server.conf  wait-for-bootstrap.sh
docs/: README.md  architecture-improvement-plan-2026-04-27.md  architecture.md
migrations/: alembic.ini
scripts/: add_user_scraper_config.py  analyze_errors.py  architecture_guard.sh  backfill_daily_news_digests.py  backfill_news_items.py  benchmark_fluxdev_prompt_study.py  benchmark_infographic_model_options.py  cancel_ineligible_generate_image_tasks.py  check_and_run_migrations.sh  check_public_contracts.sh  cleanup_news_item_duplicates.py  compare_llm_summarization.py  debug_anthropic_eval_failures.py  dump_database.py  dump_system_stats.py  enqueue_insight_reports.py  enqueue_past_day_summarization.py  evaluate_feed_detection.py  export_agent_openapi_schema.py  export_openapi_schema.py  export_title_clustering_dataset.py  generate_agent_cli_artifacts.sh  generate_ascii_infographics.py  generate_codebase_docs.py  generate_eval_html_report.py  generate_insight_report.py  generate_svg_infographics.py  generate_test_data.py  generate_thumbnails.py  import_config_feeds.py  load_production_snapshot.py  manage_apple_signin_link.py  migrate_session_to_user.py  migrate_sqlite_to_postgres.py  poll_notes_requests.py  preview_archetype_reactions.py  probe_google_vertex_us_central1.py  pull_production_db.sh  queue_control.py  report_content_metadata_keys.py  (+32 more)
templates/: admin_api_keys.html  admin_dashboard.html  admin_insight_reports.html  admin_login.html  base.html
tests/: conftest.py  test_atom_scraper.py  test_main.py
(+734 files in other folders)
